Update remove prerequire module

--- a/dist.ini
+++ b/dist.ini
@@ -34,8 +34,10 @@ filename = README.md
 Dist::Zilla = 5.006
 [Prereqs / TestRequires]
 [RemovePrereqs]
-;remove = strict
-;remove = warnings
+remove = strict
+remove = warnings
+remove = Dist::Zilla::Role::AfterBuild
+remove = Dist::Zilla::Role::BeforeBuild
 
 [PodCoverageTests]
 [PodSyntaxTests]
